--- a/grocery-app/src/App.css
+++ b/grocery-app/src/App.css
@@ -50,7 +50,7 @@ html{
   justify-content: center;
 
 }
-.item-list {
+.item-list{
   margin-top: 10px;
   margin-bottom: 10px;
   padding: 5px;
@@ -61,7 +61,12 @@ html{
   justify-content: space-between;
   display: flex;
   font-weight: bold;
+
   
+}
+.item-list:hover{
+  background-image: linear-gradient(to right, rgb(226, 229, 241), rgb(230, 99, 143));
+
 }
 
 .item-edit{
